[gd_scene load_steps=17 format=3 uid="uid://bgsdpi6h3lm5i"]

[ext_resource type="PackedScene" uid="uid://bambv1en5ke5g" path="res://Art/3D Assets/Pumpkin.tscn" id="1_b6pku"]
[ext_resource type="Script" path="res://gd/pumpkin_patch.gd" id="1_pk60f"]
[ext_resource type="FontFile" uid="uid://cqnxdb5ww4jsh" path="res://Scenes/ui/ui_fonts/Papyrus.TTF" id="2_41nqn"]
[ext_resource type="Texture2D" uid="uid://7vlkeuc0fweo" path="res://Art/Textures/Pumpkin/PumpkinPaint.png" id="3_tl2ax"]
[ext_resource type="Texture2D" uid="uid://ducr0256rxool" path="res://Art/Textures/Pumpkin/Pumpkin_Normal_2.png" id="4_ec3wu"]
[ext_resource type="Texture2D" uid="uid://dspw2na8xkos" path="res://Art/Textures/Pumpkin/Pumpkin_Roughness.png" id="5_808gi"]
[ext_resource type="AudioStream" uid="uid://cynuyb56uww6b" path="res://audio/sfx/pumpkin/sfx_pumpkinpick1.wav" id="6_8imq3"]
[ext_resource type="AudioStream" uid="uid://chb4eus6ss4ku" path="res://audio/sfx/pumpkin/sfx_pumpkinpick2.wav" id="7_xg4nt"]
[ext_resource type="AudioStream" uid="uid://cmypwnt02jld0" path="res://audio/sfx/pumpkin/sfx_pumpkinpick3.wav" id="8_s6kjt"]
[ext_resource type="AudioStream" uid="uid://d2g2n7ynufj87" path="res://audio/sfx/pumpkin/sfx_pumpkinharvest.wav" id="9_2n4cd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_58jia"]
transparency = 1
albedo_color = Color(1, 1, 0.396078, 0.188235)

[sub_resource type="SphereMesh" id="SphereMesh_8tlak"]
material = SubResource("StandardMaterial3D_58jia")
radius = 0.338
height = 0.382
is_hemisphere = true

[sub_resource type="FontVariation" id="FontVariation_fq6ww"]
base_font = ExtResource("2_41nqn")

[sub_resource type="BoxShape3D" id="BoxShape3D_pnt6m"]
size = Vector3(1, 0.281999, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pw8l1"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_tl2ax")
roughness_texture = ExtResource("5_808gi")
emission = Color(0.294118, 0.360784, 0.172549, 1)
normal_enabled = true
normal_texture = ExtResource("4_ec3wu")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_axts7"]
streams_count = 3
random_pitch = 1.05
random_volume_offset_db = 2.0
stream_0/stream = ExtResource("6_8imq3")
stream_0/weight = 1.0
stream_1/stream = ExtResource("7_xg4nt")
stream_1/weight = 1.0
stream_2/stream = ExtResource("8_s6kjt")
stream_2/weight = 1.0

[node name="pumpkin" type="Node3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
script = ExtResource("1_pk60f")

[node name="Hilight" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_8tlak")

[node name="Label3D" type="Label3D" parent="Hilight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.307086, 0)
pixel_size = 0.0017
billboard = 1
no_depth_test = true
text = "Hold E to Harvest"
font = SubResource("FontVariation_fq6ww")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.5
offset_top = -13.5
offset_right = 202.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
max_value = 5.0

[node name="HarvestArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HarvestArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.142148, 0)
shape = SubResource("BoxShape3D_pnt6m")

[node name="Pumpkin" parent="." instance=ExtResource("1_b6pku")]
material_override = SubResource("StandardMaterial3D_pw8l1")

[node name="pumpkin_pick" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_axts7")
volume_db = -6.0
bus = &"sfx"

[node name="pumpkin_harvesting" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_2n4cd")
pitch_scale = 0.9
bus = &"sfx"

[connection signal="body_entered" from="HarvestArea" to="." method="_on_harvest_area_body_entered"]
[connection signal="body_exited" from="HarvestArea" to="." method="_on_harvest_area_body_exited"]
